# specter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  deny.toml  justfile
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: boringssl-release.yml  ci.yml  deprecated-release.yml  github-release.yml  node-release.yml  python-release.yml
benches/: codex_real_streaming.rs  codex_ws_streaming.rs  streaming_vs_reqwest.rs  websocket_vs_fastwebsockets.rs
benches/native_h3_vs_rust_clients/: Cargo.toml
benches/native_h3_vs_rust_clients/scripts/: current_rows_awsdev.sh  current_rows_high_water.py  current_rows_pair_scout_parse.py  current_rows_parse.py  current_rows_repeat_parse.py
benches/native_h3_vs_rust_clients/src/: main.rs
bindings/node/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/__tests__/: client.test.js  grpc.test.js  websocket.test.js  websocket_h2.test.js  websocket_h3.test.js
bindings/node/src/: lib.rs  websocket.rs  websocket_h2.rs  websocket_h3.rs  ws_types.rs
bindings/python/: Cargo.toml  README.md  README_PYPI.md  pyproject.toml  specter.pyi
bindings/python/src/: lib.rs  websocket.rs  websocket_h2.rs  websocket_h3.rs  ws_types.rs
bindings/python/tests/: test_client.py  test_grpc.py  test_websocket.py  test_websocket_h2.py  test_websocket_h3.py
deprecated/crates/specters/: Cargo.toml  README.md  build.rs
deprecated/python/specters/: README.md  pyproject.toml
docs/: specter-native-h3-remaining-seams.md  specter-websocket-h3-current-status-and-gap-plan.md  test-build-optimization-shared-plan.md  warpsock-native-h3-remaining-seams.md
docs/benchmarks/: RELEASE_PERFORMANCE.md
docs/benchmarks/2026-05-24-streaming/: README.md  final2-h1-request-s100.json  final2-h1-response-s100.json  final2-h2-request-s100.json  final2-h2-response-repeat1-s100.json  final2-h2-response-repeat2-s100.json  final2-h2-response-repeat3-s100.json  final2-h2-response-s100.json  summary.json
docs/benchmarks/2026-05-25-streaming/: h1-request-s100-proof.json  h1-response-s100-proof.json  h2-request-s100-proof.json  h2-response-s100-proof.json
docs/benchmarks/2026-06-03-streaming/: README.md  h1-req-rep1.json  h1-req-rep2.json  h1-req-rep3.json  h1-resp-rep1.json  h1-resp-rep2.json  h1-resp-rep3.json  h2-req-rep1.json  h2-req-rep2.json  h2-req-rep3.json  h2-resp-rep1.json  h2-resp-rep2.json  h2-resp-rep3.json
docs/benchmarks/codex-real-streaming/: 2026-05-24T205852Z.json  n10-final.json
docs/benchmarks/codex-ws-streaming/: 2026-05-24T210510Z.json  n10-final.json  n100-chrome146-release.json  n100-none-release.json  n30-baseline.json  n30-postfix.json  n50-postfix.json
docs/benchmarks/native-h3-vs-rust-clients/: 2026-05-24-full-local-n30-plus-rfc9220-comparators.json  2026-05-24-full-local-n30.json  2026-05-24-full-local-smoke.json  2026-05-24-full-local-with-s2n-smoke.json  2026-05-24-quic-transport-local.json  (+28 more)
docs/fingerprints/: chrome-142-148.md  firefox-version-profiles.md
examples/: debug_date.rs  fingerprint_validation.rs  protocol_test.rs  proxy_browserleaks.rs  proxy_h3_test.rs  proxy_test.rs  tcp_fingerprint.rs
scripts/: build-boringssl.sh  check-release-lockfiles.sh  env.sh  extract-boringssl.sh  lib-bssl-env.sh  native-rust-target.sh  run-public-endpoint-compatibility.sh  validate-redacted-artifacts.py
src/: auth.rs  cache.rs  cookie.rs  error.rs  headers.rs  lib.rs  request.rs  response.rs  timeouts.rs  version.rs
src/fingerprint/: http2.rs  http3.rs  mod.rs  profiles.rs  tls.rs
src/grpc/: codec.rs  mod.rs
src/pool/: alt_svc.rs  mod.rs  multiplexer.rs
src/proxy/: http_connect.rs  mod.rs  socks5.rs  udp_transport.rs
src/transport/: connector.rs  dns.rs  h1.rs  h1_h2.rs  h2_native.rs  h3.rs  mod.rs  session.rs  tcp.rs
src/websocket/: client.rs  connection.rs  extension.rs  frame.rs  handshake.rs  mod.rs
tests/: benchmark_harness.rs  benchmark_thresholds.rs  benchmarks.rs  bot_detection_validation.rs  builder_knobs.rs  chrome_versions.rs  compression.rs  concurrency.rs  connect_path_perf.rs  error_handling.rs  fingerprint_builder_defaults.rs  fingerprint_integration.rs  firefox_fingerprint.rs  firefox_versions.rs  grpc_bidi.rs  grpc_framing.rs  grpc_request.rs  grpc_trailers.rs  h1_pooling.rs  h1_request_streaming.rs  h1_rfc_compliance.rs  h1_streaming.rs  h2_flow_control.rs  h2_frames_debug.rs  h2_header_casing.rs  h2_inline_streaming.rs  h2_malformed.rs  h2_multiplexing.rs  h2_push_promise.rs  h2_state_machine.rs  h3_competitor_benchmark.rs  h3_fingerprint_config.rs  h3_native_codec.rs  h3_native_handshake.rs  h3_native_path_migration.rs  h3_native_quic.rs  h3_native_recovery.rs  h3_native_tls.rs  h3_native_tls_resumption.rs  h3_no_quiche_default.rs  (+45 more)
tests/helpers/: connection_tracker.rs  mock_h2_server.rs  mock_h3_server.rs  mock_server.rs  mock_ws_server.rs  mod.rs  tls.rs
(+324 files in other folders)
