[package]
name = "specter"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "HTTP client with full TLS/HTTP2 fingerprint control"
repository = "https://github.com/jaredboynton/specter"
keywords = ["http", "http3", "fingerprint", "tls", "boringssl"]
categories = ["network-programming", "web-programming::http-client"]
authors = ["Jared Boynton"]
readme = "README.md"

[dependencies]
# TLS with BoringSSL
boring = "4"
boring-sys = "4"
tokio-boring = "4"

# HTTP/1.1 (minimal implementation)
httparse = "1"

# HTTP/2 (custom implementation for full fingerprint control)
fluke-hpack = "0.3"
http = "1"

# HTTP/3 + QUIC (includes BoringSSL internally)
quiche = { version = "0.24", default-features = false, features = ["boringssl-boring-crate"] }

# Async runtime
tokio = { version = "1", features = ["net", "time", "sync", "rt-multi-thread", "macros", "fs", "io-util"] }

# Compression
flate2 = "1"
brotli = "7"
zstd = "0.13"

# Utilities
bytes = "1"
thiserror = "2"
tracing = "0.1"
url = "2"
chrono = "0.4"
sha2 = "0.10"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = "0.2"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
