[package]
name = "specter"
version = "1.0.3"
edition = "2021"
license = "MIT"
description = "HTTP client with full TLS, HTTP/2, and HTTP/3 fingerprint control"
repository = "https://github.com/jaredboynton/specter"
keywords = ["http", "http3", "fingerprint", "tls", "boringssl"]
categories = ["network-programming", "web-programming::http-client"]
authors = ["Jared Boynton"]
readme = "README.md"

[dependencies]
# TLS with BoringSSL
boring = "4"
boring-sys = "4"
tokio-boring = "4"

# HTTP/1.1 (minimal implementation)
httparse = "1"

# HTTP/2 (custom implementation for full fingerprint control)
http = "1"

# HTTP/3 + QUIC (includes BoringSSL internally)
quiche = { version = "0.24", default-features = false, features = ["boringssl-boring-crate"] }

# Async runtime
tokio = { version = "1", features = ["net", "time", "sync", "rt-multi-thread", "macros", "fs", "io-util"] }

# Compression
flate2 = "1"
brotli = "8"
zstd = "0.13"

# Utilities
bytes = "1"
thiserror = "2"
tracing = "0.1"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = "0.3"
psl = "2"
socket2 = { version = "0.6", features = ["all"] }
base64 = "0.22.1"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
rcgen = "0.14.5"

# Make this crate standalone (not part of parent workspace)
[workspace]

# Note: Windows-specific crates (windows-sys, windows-targets, etc.) appear in Cargo.lock
# as transitive dependencies from tokio, quiche, etc., but they are platform-specific
# and will only be compiled when building for Windows targets. On macOS/Linux, they
# are automatically excluded from the build.

# Build profiles optimized for M4 Max (16 cores, 128GB RAM)
[profile.dev]
# Development: fast compilation, minimal optimization
opt-level = 0
debug = true
incremental = true
codegen-units = 16  # Parallel codegen for faster builds on 16-core machine

[profile.release]
# Release: maximum optimization with reasonable compile time
opt-level = 3
lto = "thin"  # Thin LTO balances optimization and compile time
codegen-units = 1  # Single unit for better optimization
debug = false
panic = "abort"  # Smaller binary size

[profile.bench]
# Benchmark profile: same as release but with debug symbols for profiling
inherits = "release"
debug = true
